--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ databases:
 services:
   - type: web
     name: nextcloud
+    plan: starterplus
     env: docker
     repo: https://github.com/nextcloud/docker.git
     dockerfilePath: ./18.0/apache/Dockerfile
