--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ databases:
 services:
   - type: web
     name: nextcloud
-    plan: starterplus
+    plan: 'starter plus'
     env: docker
     repo: https://github.com/nextcloud/docker.git
     dockerfilePath: ./18.0/apache/Dockerfile
