--- a/render.yaml
+++ b/render.yaml
@@ -3,27 +3,40 @@ databases:
     plan: starter
 
 services:
-  - type: web
-    name: nextcloud
-    plan: 'starter plus'
+  - type: pserv
+    name: nextcloud-redis
     env: docker
-    repo: https://github.com/nextcloud/docker.git
-    dockerfilePath: /.examples/dockerfiles/cron/apache/Dockerfile
-    dockerContext: /.examples/dockerfiles/cron/apache
-    envVars:
-      - key: POSTGRES_USER
-        fromDatabase:
-          name: nextcloud
-          property: user
-      - key: POSTGRES_PASSWORD
-        fromDatabase:
-          name: nextcloud
-          property: password
-      - key: POSTGRES_DB
-        fromDatabase:
-          name: nextcloud
-          property: database
-      - key: POSTGRES_HOST
-        fromDatabase:
-          name: nextcloud
-          property: host
+    repo: https://github.com/docker-library/redis
+    dockerfilePath: /6.0-rc/Dockerfile
+    dockerContext: /6.0-rc
+    disk:
+      name: data
+      mountPath: /data
+
+#  - type: web
+#    name: nextcloud
+#    plan: 'starter plus'
+#    env: docker
+#    repo: https://github.com/nextcloud/docker.git
+#    dockerfilePath: /.examples/dockerfiles/cron/apache/Dockerfile
+#    dockerContext: /.examples/dockerfiles/cron/apache
+#    disk:
+#      name: data
+#      mountPath: /data
+#    envVars:
+#      - key: POSTGRES_USER
+#        fromDatabase:
+#          name: nextcloud
+#          property: user
+#      - key: POSTGRES_PASSWORD
+#        fromDatabase:
+#          name: nextcloud
+#          property: password
+#      - key: POSTGRES_DB
+#        fromDatabase:
+#          name: nextcloud
+#          property: database
+#      - key: POSTGRES_HOST
+#        fromDatabase:
+#          name: nextcloud
+#          property: host
