--- a/nextcloud/Dockerfile
+++ b/nextcloud/Dockerfile
@@ -1,7 +1,7 @@
 FROM nextcloud:apache
 
 RUN apt-get update && apt-get install -y supervisor
-RUN mkdir -p /var/log/supervisor
+RUN mkdir -p /var/log/supervisord
 RUN mkdir -p /var/run/supervisord
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
