--- a/nextcloud/Dockerfile
+++ b/nextcloud/Dockerfile
@@ -4,7 +4,8 @@ RUN apt-get update && apt-get install -y supervisor
 RUN mkdir -p /var/log/supervisord
 RUN mkdir -p /var/run/supervisord
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY entrypoint.sh /entrypoint.sh
 
 ENV NEXTCLOUD_UPDATE=1
 
-CMD ["/usr/bin/supervisord"]
+CMD ["/entrypoint.sh"]
