--- a/nextcloud/Dockerfile
+++ b/nextcloud/Dockerfile
@@ -1,9 +1,12 @@
 FROM nextcloud:apache
 
-RUN apt-get update && apt-get install -y supervisor
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-COPY entrypoint.sh /entrypoint.sh
+RUN apt-get update && apt-get install -y \
+    supervisor \
+  && rm -rf /var/lib/apt/lists/* \
+  && mkdir /var/log/supervisord /var/run/supervisord
+
+COPY supervisord.conf /
 
 ENV NEXTCLOUD_UPDATE=1
 
-CMD ["sh", "/entrypoint.sh"]
+CMD ["/usr/bin/supervisord", "-c", "/supervisord.conf"]
