--- a/nextcloud/Dockerfile
+++ b/nextcloud/Dockerfile
@@ -3,7 +3,7 @@ FROM nextcloud:apache
 RUN apt-get update && apt-get install -y \
     supervisor \
   && rm -rf /var/lib/apt/lists/* \
-  && mkdir -p /var/log/supervisord
+  && mkdir -p /var/log/supervisord \
   && mkdir -p /var/run/supervisord
 
 COPY supervisord.conf /
