--- a/nextcloud/Dockerfile
+++ b/nextcloud/Dockerfile
@@ -3,11 +3,12 @@ FROM nextcloud:apache
 RUN apt-get update && apt-get install -y \
     supervisor \
   && rm -rf /var/lib/apt/lists/* \
-  && mkdir -p /var/log/supervisord \
-  && mkdir -p /var/run/supervisord
+  && mkdir -p /var/log/supervisord
 
 COPY supervisord.conf /
 
 ENV NEXTCLOUD_UPDATE=1
+
+EXPOSE 80
 
 CMD ["/usr/bin/supervisord", "-c", "/supervisord.conf"]
