--- a/render.yaml
+++ b/render.yaml
@@ -11,37 +11,43 @@ services:
       name: data
       mountPath: /var/lib/redis
       sizeGB: 10
-#  - type: web
-#    name: nextcloud
-#    plan: 'starter plus'
-#    env: docker
-#    dockerfilePath: /nextcloud/Dockerfile
-#    dockerContext: /nextcloud
-#    domains:
-#      - nextcloud.mackenzieclark.codes
-#    disk:
-#      name: nextcloud
-#      mountPath: /var/www/html
-#      sizeGB: 500
-#    envVars:
-#      - key: POSTGRES_USER
-#        fromDatabase:
-#          name: nextcloud
-#          property: user
-#      - key: POSTGRES_PASSWORD
-#        fromDatabase:
-#          name: nextcloud
-#          property: password
-#      - key: POSTGRES_DB
-#        fromDatabase:
-#          name: nextcloud
-#          property: database
-#      - key: POSTGRES_HOST
-#        fromDatabase:
-#          name: nextcloud
-#          property: host
-#      - key: REDIS_HOST
-#        fromService:
-#          name: nextcloud-redis
-#          type: pserv
-#          property: host
+  - type: web
+    name: nextcloud
+    plan: 'starter plus'
+    env: docker
+    dockerfilePath: /nextcloud/Dockerfile
+    dockerContext: /nextcloud
+    autoDeploy: false
+    domains:
+      - nextcloud.mackenzieclark.codes
+    disk:
+      name: nextcloud
+      mountPath: /var/www/html
+      sizeGB: 500
+    envVars:
+      - key: POSTGRES_USER
+        fromDatabase:
+          name: nextcloud
+          property: user
+      - key: POSTGRES_PASSWORD
+        fromDatabase:
+          name: nextcloud
+          property: password
+      - key: POSTGRES_DB
+        fromDatabase:
+          name: nextcloud
+          property: database
+      - key: POSTGRES_HOST
+        fromDatabase:
+          name: nextcloud
+          property: host
+      - key: REDIS_HOST
+        fromService:
+          name: nextcloud-redis
+          type: pserv
+          property: host
+      - key: NEXTCLOUD_ADMIN_USER
+        sync: false
+      - key: NEXTCLOUD_ADMIN_PASSWORD
+        sync: false
+
