--- a/render.yaml
+++ b/render.yaml
@@ -1,54 +1,14 @@
-databases:
-  - name: nextcloud
-    plan: starter
-
 services:
-  - type: pserv
-    name: nextcloud-redis
-    env: docker
-    repo: https://github.com/render-examples/redis
-    disk:
-      name: data
-      mountPath: /var/lib/redis
-      sizeGB: 10
   - type: web
-    name: nextcloud
+    name: filestash
     plan: 'starter plus'
     env: docker
-    dockerfilePath: /nextcloud/Dockerfile
-    dockerContext: /nextcloud
-    autoDeploy: false
+    repo: https://github.com/mickael-kerjean/filestash
+    dockerfilePath: /docker/Dockerfile
+    dockerContext: /docker
     domains:
-      - nextcloud.mackenzieclark.codes
+      - filestash.mackenzieclark.codes
     disk:
       name: nextcloud
-      mountPath: /var/www/html
-      sizeGB: 500
-    envVars:
-      - key: POSTGRES_USER
-        fromDatabase:
-          name: nextcloud
-          property: user
-      - key: POSTGRES_PASSWORD
-        fromDatabase:
-          name: nextcloud
-          property: password
-      - key: POSTGRES_DB
-        fromDatabase:
-          name: nextcloud
-          property: database
-      - key: POSTGRES_HOST
-        sync: false
-#        fromDatabase:
-#          name: nextcloud
-#          property: host
-      - key: REDIS_HOST
-        fromService:
-          name: nextcloud-redis
-          type: pserv
-          property: host
-      - key: NEXTCLOUD_ADMIN_USER
-        sync: false
-      - key: NEXTCLOUD_ADMIN_PASSWORD
-        sync: false
-
+      mountPath: /app/data
+      sizeGB: 25
