--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
     name: filestash-oidc-proxy
+    repo: https://github.com/pusher/oauth2_proxy
+    branch: 3a843f815d8bec6792eaee35bc812d06788c533f
     env: docker
-    dockerfilePath: /filestash-oidc-proxy/Dockerfile
-    dockerContext: /filestash-oidc-proxy
+    dockerfilePath: /Dockerfile
+    dockerContext: /
     domains:
       - filestash.mackenzieclark.codes
     envVars:
