definintely not goig to work

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: filestash-oidc-proxy
     repo: https://github.com/pusher/oauth2_proxy
-    branch: 3a843f815d8bec6792eaee35bc812d06788c533f
+    commit: 3a843f815d8bec6792eaee35bc812d06788c533f
     env: docker
     domains:
       - filestash.mackenzieclark.codes
