--- a/render.yaml
+++ b/render.yaml
@@ -26,7 +26,7 @@ services:
       - key: OAUTH2_PROXY_EMAIL_DOMAINS
         value: '*'
       - key: OAUTH2_PROXY_HTTP_ADDRESS
-        value: 'localhost:4180'
+        value: '0.0.0.0:4180'
 
   - type: pserv
     name: filestash
