--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
     name: filestash-oidc-proxy
-    repo: https://github.com/xmclark/oauth2_proxy
-    branch: fix
+    dockerfilePath: /filestash-oidc-proxy/Dockerfile
+    dockerContext: /filestash-oidc-proxy
     env: docker
     domains:
       - filestash.mackenzieclark.codes
