--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
     name: filestash-oidc-proxy
-    dockerfilePath: /filestash-oidc-proxy/Dockerfile
-    dockerContext: /filestash-oidc-proxy
+    dockerfilePath: ./filestash-oidc-proxy/Dockerfile
+    dockerContext: ./filestash-oidc-proxy
     env: docker
     domains:
       - filestash.mackenzieclark.codes
