make it a worker

--- a/render.yaml
+++ b/render.yaml
@@ -44,7 +44,7 @@ services:
     env: docker
     dockerfilePath: /nginx/Dockerfile
     dockerContext: /nginx
-  - type: web
+  - type: worker
     name: busybox
     env: docker
     dockerfilePath: /busybox/Dockerfile
